feat: feat: Add LiFi module for route discovery and transaction building
- Add .gitattributes to mark .env files as linguist-generated
- Exclude sensitive files like API keys and wallet files from training
- Allow .env.example files for training (no sensitive data)
- Update Copilot instructions with security configuration

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
 # Rust
-/target/
+**/target/
+!**/target/.gitkeep
 **/*.rs.bk
 *.pdb
-Cargo.lock
+# Cargo.lock should be committed for applications, ignored for libraries
+# Cargo.lock
 
 # Debug symbols
 *.dSYM/
@@ -33,8 +35,6 @@ logs/
 !.env.example
 
 # Configuration files with sensitive data
-config.toml
-config.json
 secrets.toml
 secrets.json
 
@@ -97,3 +97,5 @@ transactions.json
 # Network specific configs
 mainnet.json
 testnet.json
+
+.archive/
