feat: refactor to DI-based architecture with robust EVM address handling
- Upgrade dependencies: added alloy-primitives, k256, hex for secure EVM operations
- Implement robust private key to EVM address conversion using k256 and keccak256
- Add Chain trait with get_primary_wallet_address method for DI compatibility
- Refactor Strategy trait to use DI: inject dependencies at construction time
- Update AtomicArbStrategy and LiquidatorStrategy to store DI dependencies as fields
- Refactor transaction building functions to use DI chain context
- Update Dockerfile to run with --bin worker option for correct binary execution
- Add test programs for EVM address derivation verification
- Complete end-to-end DI flow: AppContext -> Strategy -> Chain -> Address handling

All critical EVM address handling is now DI-compatible and uses modern cryptographic libraries.
Bot successfully builds, runs, and handles Li.Fi integration with proper address derivation.

--- a/runtime/worker/Dockerfile
+++ b/runtime/worker/Dockerfile
@@ -14,4 +14,4 @@ COPY .env .
 RUN cargo build --release
 
 # 最後のレイヤーでcargoを実行（ソースが変更された場合はこちらが優先される）
-CMD ["cargo", "run", "--release"]
+CMD ["cargo", "run", "--release", "--bin", "worker"]
