--- a/runtime/worker/.env.example
+++ b/runtime/worker/.env.example
@@ -1,3 +1,4 @@
 # Environment variables for worker bot
-WALLET_SECRETS_EVM=
-LIFI_API_KEYS=
+# Comma-separated list of EVM private keys (without 0x prefix) or addresses
+WALLET_SECRETS_EVM=your_private_key_here,0x1234567890123456789012345678901234567890
+LIFI_API_KEYS=your_lifi_api_key_here
