--- a/runtime/worker/Cargo.toml
+++ b/runtime/worker/Cargo.toml
@@ -10,3 +10,6 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tokio = { version = "1.0", features = ["full", "macros", "rt-multi-thread"] }
 toml = "0.5"
+hex = "0.4"
+alloy-primitives = { version = "1.2", features = ["serde"] }
+k256 = { version = "0.13", features = ["ecdsa"] }
